[package]
edition = "2021"
name = "napi-folder"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16.13"
tokio = { version = "1.45.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
serde_json = "1.0.140"
ts-rs = { version = "10.1.0", features = ["no-serde-warnings"] }
moka = { version = "0.12.10", features = ["future"] }
rayon = "1.10.0"
mime_guess = { version = "2.0.5" }
thiserror = "2.0.12"
chardetng = { version = "0.1.17" }
encoding_rs = "0.8.35"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
